<resources>
    <string name="app_name">Firebase Test</string>
    <string name="toolbar_title">Firebase LISTING</string>
    <string name="alert_no_network">No Internet Connection</string>
    <string name="lb_sign_in">SIGN IN</string>
    <string name="lb_sign_in_mob_no">Sign in with your mobile number!</string>
    <string name="next">Next</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Sign out</string>
    <string name="rsvp">RSVP</string>
    <string name="yes">Yes</string>
    <string name="maybe">May Be</string>
    <string name="no">No</string>
    <string name="adult">Adult :</string>
    <string name="kids">Kids :</string>
    <string name="message">Message :</string>
    <string name="send">SEND</string>
    <string name="enter_code">Enter Your Code</string>
    <string name="otp_lb_2">Feed in the OTP received, trying to detect automatically</string>
    <string name="enter_code_title">ENTER CODE</string>
    <string name="resend">Resend</string>
    <string name="enter_valid_code">Please enter valid code.</string>
    <string name="enter_valid_mob_num">Please enter valid mobile number.</string>
    <string name="progress_msg">Please wait...</string>
    <string name="no_events">No events found.</string>
    <string name="no_user">Sorry, You don\'t have any invitations yet. To use this app you must be invited by the invitee.</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string name="data_submitted">Data submitted successfully.</string>
    <string name="no_chat">Please start conversation.</string>
    <string name="notification">Notifications</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
</resources>
