<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/enter_code_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginTop="@dimen/_50dp"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_50dp"
                android:elevation="@dimen/_5dp"
                app:cardBackgroundColor="@color/white"

                app:cardCornerRadius="@dimen/_5dp"

                app:cardPreventCornerOverlap="false">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_20dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20dp"
                        android:fontFamily="@font/work_sans_medium"
                        android:gravity="center_horizontal"
                        android:text="@string/enter_code"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:fontFamily="@font/work_sans"
                        android:gravity="center_horizontal"
                        android:text="@string/otp_lb_2"
                        android:textColor="@color/grey_text"
                        android:textSize="@dimen/_16sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20dp"
                        android:background="@drawable/shadow"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/etOTP"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50dp"

                            android:layout_marginLeft="@dimen/_5dp"
                            android:layout_marginRight="@dimen/_5dp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/work_sans_medium"
                            android:gravity="center"
                            android:inputType="numberPassword"
                            android:maxLength="6"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/dark_text"
                            android:textColorHint="@color/grey_text" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60dp"
                        android:layout_marginLeft="@dimen/_7dp"
                        android:layout_marginTop="@dimen/_20dp"
                        android:layout_marginRight="@dimen/_7dp"
                        android:background="@drawable/btn_round_curve"
                        android:fontFamily="@font/work_sans_bold"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10dp">

                        <TextView
                            android:id="@+id/txtResend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_medium"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/resend" />

                        <TextView
                            android:id="@+id/txtTimer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="@font/work_sans_medium"
                            android:text="10"
                            android:textColor="@color/colorPrimary" />

                    </RelativeLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>